--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Area Pulse
-description: Tracking Nigeria's political, economic, and tech discourse
-theme: jekyll-theme-modernist 
+description: Tracking Nigeria's political, economic, and social landscape
+theme: jekyll-theme-architect 
