Fix blog post links with correct baseurl for GitHub Pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Area Pulse
 description: Tracking Nigeria's political, economic, and social landscape
-theme: jekyll-theme-architect 
+theme: jekyll-theme-architect
+baseurl: "/Area-Pulse" 
