--- a/.github/workflows/publish_blog.yml
+++ b/.github/workflows/publish_blog.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build-and-deploy:
+    if: ${{ false }}  # workflow disabled (replaced by unified pages workflow)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
